first_numpy.txt
>>> import numpy as np
>>> vector=np.array([1,2,3])
>>> matrix=np.array([1,2],[3,4])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: Field elements must be 2- or 3-tuples, got '3'
>>> matrix=np.array([[1,2],[3,4]])
>>> matrix2=np.array([[9,8],[8,7]])
>>> matrix3=matrix+matrix2
>>> scaledvector=2*vector
>>> print(matrix3)
[[10 10]
 [11 11]]
>>> print(scaledvector)
[2 4 6]
>>> undefined=matrix*vector
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: operands could not be broadcast together with shapes (2,2) (3,)
>>> matrix=np.array([[1],[2]])
>>> newmatrix=vector@matrix
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 3)
>>> newmatrix=matrix@vector
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 1)
>>> vector2=np.array([4,5,6])
>>> print(vector1@vector2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'vector1' is not defined. Did you mean: 'vector'?
>>> print(vector@vector2)
32
>>> matrix3=matrix@matrix2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 1)
>>> print(matrix.shape())
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'tuple' object is not callable
>>> print(matrix.shape)
(2, 1)
>>> print(matrix2.shape)
(2, 2)
>>> print(matrix.reshape(1,2))
[[1 2]]
>>> print(matrix.shape)
(2, 1)
>>> matrix=matrix.reshape(1,2))
  File "<stdin>", line 1
    matrix=matrix.reshape(1,2))
                              ^
SyntaxError: unmatched ')'
>>> matrix=matrix.reshape(1,2)
>>> print(matrix.shape)
(1, 2)
>>> print(matrix@matrix2)
[[25 22]]
>>> I=np.eye(2)
>>> print(matrix@I)
[[1. 2.]]
>>> print(matrix2@I)
[[9. 8.]
 [8. 7.]]
>>> print(I@matrix2)
[[9. 8.]
 [8. 7.]]
>>> print(matrix2@T.matrix)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'T' is not defined
>>> print(matrix2@matrix.T)
[[25]
 [22]]
>>> transformedvec=matrix2@vector
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 2)
>>> vector=np.array([1,2])
>>> transformedvec=matrix2@vector
>>> print(transformed)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'transformed' is not defined. Did you mean: 'transformedvec'?
>>> print(transformedvec)
[25 22]
>>> matrixinv=np.linalg.inv(matrix2)
>>> orig_vec=matrixinv@transformedvec
>>> print(orig_vec==vector)
[False  True]
>>> print(np.closeall(org_vec,vector))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/ubuntu007/aijourney/hardy_env/lib/python3.12/site-packages/numpy/__init__.py", line 792, in __getattr__
    raise AttributeError(f"module {__name__!r} has no attribute {attr!r}")
AttributeError: module 'numpy' has no attribute 'closeall'
>>> print(np.allclose(org_vec,vector))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'org_vec' is not defined. Did you mean: 'orig_vec'?
>>> print(np.allclose(orig_vec,vector))
True
>>> # Create a 3x3 of random numbers
Filtered:\n", data)>>> data = np.random.rand(3,3)
>>> print("Original:\n", data)
Original:
 [[0.06469812 0.65543075 0.68719191]
 [0.37536038 0.19368091 0.13937768]
 [0.66996406 0.02509703 0.8979712 ]]
>>>
>>> # The 'Perfectionist' Filter:
>>> # Set everything less than 0.5 to exactly 0
>>> data[data < 0.5] = 0
>>>
>>> print("Filtered:\n", data)
Filtered:
 [[0.         0.65543075 0.68719191]
 [0.         0.         0.        ]
 [0.66996406 0.         0.8979712 ]]
>>> print(np.mean(matrix2,axis=0)
... )
[8.5 7.5]
>>> import numpy as np
 [50,  1,  2, 60],
              [70,  3,  4, 80],
              [90, 11, 12, 13]])

# 2. Slice >>>
>>> # 1. Create a 4x4 matrix with specific numbers
>>> A = np.array([[10, 20, 30, 40],
...               [50,  1,  2, 60],
...               [70,  3,  4, 80],
...               [90, 11, 12, 13]])
nt("Middle Square:\n", middle)

>>>
>>> # 2. Slice the middle (Rows 1-2, Cols 1-2)
x of that middle>>> # Remember: Python slicing is [start:stop], where stop is not included
 = np.max(middle>>> middle = A[1:3, 1:3]
)
print("Max of >>> print("Middle Square:\n", middle)
Middle Square:
"God Tier" Move: Wipe out everything in A larger than that max
A[A > middle_max] = 0

print("Final Matrix:\n", A [[1 2]
 [3 4]]
>>>
)>>> # 3. Find the Max of that middle part
>>> middle_max = np.max(middle)
>>> print("Max of middle:", middle_max)
Max of middle: 4
>>>
>>> # 4. The "God Tier" Move: Wipe out everything in A larger than that max
>>> A[A > middle_max] = 0